tests/negative/pkg_errors_in_pkg/target/src/foo_static.toit
// Copyright (C) 2021 Toitware ApS. All rights reserved.

say_hi:
  "it's" "an error to use a string as target"
